package at.spengergasse.domain.domain;

import jakarta.persistence.Column;
import jakarta.persistence.Embeddable;
import lombok.*;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder

@Embeddable
public class Address {
    @Column(nullable = false)
    private String street;
    @Column(nullable = false)
    private String zip;
    @Column(nullable = false)
    private String city;
    @Column(nullable = false)
    private String country;
}
