package at.spengergasse.domain.domain;

public enum DeliveryStatus {
    Created,
    InTransit,
    OutForDelivery,
    Delivered,
    Failed,
    Returned
}
