@startuml

' Objects

class Address<Embedded><< (V,#ADD8E6) ValueObject >> {
    street: String <<nn>>
    zip: String <<nn>>
    city: String <<nn>>
    country: String <<nn>>
}

class Email<Embedded><< (R, #676767) RichType >> {
    value: String
}

entity Person<<Entity>> {
    firstname: String <<nn>>
    lastname: String <<nn>>
}

entity Customer<<Entity>> {
    email: Email <<nn>>
    phone: String
    address: List<Address> <<nn>
}

entity Depot<<Entity>> {
    code: String <<nn>> <<unique>>
    name: String <<nn>>
    address: Address <<nn>>
}

entity Driver<<Entity>> {
    currentDepot: Depot <<nn>>
}

enum DeliveryStatus<<Enum>> {
    Created
    InTransit
    OutForDelivery
    Delivered
    Failed
    Returned
}

entity Shipment<<Entity>> {
    sender: Customer <<nn>>
    trackingNumber: String <<nn>> <<unique>>
    recipientName: String <<nn>>
    recipientAddress: Address <<nn>>
    weightKg: BigDecimal <<nn>>
    status: DeliveryStatus <<nn>>
    currentDepot: Depot
    assignedDriver: Driver
    deliveries : List<DeliveryAttempt>
}

entity DeliveryAttempt<<Entity>> {
    shipment: Shipment <<nn>>
    driver: Driver <<nn>>
    attemptedAt: LocalDateTime <<nn>
    success: boolean <<nn>>
    notes: string
}

' Relations

Customer *-- Address : contains
Customer -[dashed]-> Email

Person <|-- Customer
Person <|-- Driver

Depot *-- Address : located at

Driver "0..n" --> "assigned to" Depot

Shipment *-up- Address : "recipient address"
Shipment "0..n" --> "1" Customer : sent by
Shipment "0..n" --> "0..1" Depot : currently at
Shipment "0..n" --> "0..1" Driver : assigned to
Shipment -right-> DeliveryStatus : status
Shipment *--- DeliveryAttempt : (bidirectional)

DeliveryAttempt "0..n" --> "1" Shipment : for
DeliveryAttempt "0..n" ---> "1" Driver : by

@enduml